# SealevelStudio4

./: .dockerignore  .env.production.template  .gitignore  .nvmrc  .railwayignore  .yarnrc  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  Anchor.toml  Budget.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.mcp-server  Dockerfile.ollama  Dockerfile.prod  FEATURE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_MARKETING.md  PRODUCTION_QUICKSTART.md  README.md  README_VERISOL.md  ROADMAP.md  SECURITY_SUMMARY.md  SECURITY_VULNERABILITY_REPORT.md  TEST_PLAN.md  TEST_RESULTS.md  TEST_RESULTS_COMPREHENSIVE.md  WHITEPAPER.md  docker-compose.prod.yml  docker-compose.yml  env.minimal.template  env.template  index.html  middleware.ts  monetizationPotential.md  next.config.js  package-lock.json  package.json  railway.toml  setup-platform-fee.sh  (+5 more)
ReadMe/: ProjectOutline.md
app/: globals.css  layout.tsx  page.tsx
docs/: ADVANCED_ARBITRAGE.md  AGENT_HIERARCHY.md  AI_DEFI_FUTURE.md  AI_IMPROVEMENT_GUIDE.md  API.md  API_KEYS_SETUP.md  API_TESTING.md  ARBITRAGE_RESULTS_SCHEMA.md  ARBITRAGE_SCANNER_IMPROVEMENTS.md  ATTESTATION_PROGRAM_QUICKSTART.md  ATTESTATION_PROGRAM_SETUP.md  ATTESTATION_SETUP_GUIDE.md  BLEEDING_EDGE_INSTALLATION.md  (+54 more)
programs/attestation-program/programs/attestation-program/: Cargo.toml
programs/attestation-program/programs/attestation-program/src/: lib.rs
programs/seal-presale/: Anchor.toml  Cargo.toml  FIX_BUILD_ISSUES.md  Xargo.toml  package.json  tsconfig.json
programs/seal-presale/scripts/: INITIALIZE_NOW.md  QUICK_INIT.md  README.md  SETUP.md  contribute.ts  create-seal-token.ts  find-addresses.sh  initialize.ts  load-program.ts  view-state.ts
programs/seal-presale/src/: lib.rs
(+440 files in other folders)
