[workspace]
members = [
    "programs/seal-presale",
    "programs/attestation-program/programs/attestation-program",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true

