[package]
name = "seal-presale"
version = "0.1.0"
description = "SEAL Token Presale Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seal_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

