[package]
name = "sealevel-attestation"
version = "0.1.0"
description = "Sealevel Studios - Attestation Program for ZK proof verification and compressed NFT minting"
authors = ["Sealevel Studios"]
edition = "2021"
repository = "https://github.com/sealevelstudio/sealevel-studio"
homepage = "https://sealevel.studio"
documentation = "https://docs.sealevel.studio"
keywords = ["solana", "attestation", "zk-proof", "cnft", "sealevel"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sealevel_attestation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
